RHDP-Scheduler/openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhdp-scheduler
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/disable_cookies: "false"
spec:
  to:
    kind: Service
    name: rhdp-scheduler-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
